[package]
authors = ["janjongen <jan.jongen@valtech.com>"]
edition = "2021"
readme = "README.md"
name = "maxaz3166-board"
version = "0.1.0"

[dependencies]
heapless = "0.7"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
static_cell = "1"
stm32f4xx-hal = { version = "0.22.0", features = ["stm32f412"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

critical-section = "1.1.3"
ssd1306 = "0.9.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "maxaz3166-board"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
