[package]
authors = ["janjongen <jan.jongen@valtech.com>"]
edition = "2021"
readme = "README.md"
name = "mxaz3166-display-example"
version = "0.1.0"

[dependencies]
mxaz3166-board = {path = "../.."}

heapless = "0.7"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
static_cell = "1"


defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

critical-section = "1.1.3"

embedded-hal = "1.0.0"


# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
